<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">SuperfyMe</string>
    <!-- <string name="api_key">AIzaSyBMyUVordKgjw6Ie_tqqs2tNCLdOPAkBh8</string> -->
    <string name="api_key">AIzaSyBx2PNJp3xxlcZBPQeDZTFoPJjeaPtEUU0</string>
    
    
    <string name="report">Report</string>
    <string name="show_on_map">Show On Map</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_anonymously">Send Message Anonymously</string>
    <string name="delete">delete</string>
    <string name="follow_user">Follow User</string>
    <string name="send">send</string>
    <string name="add_picture">Add Picture</string>
    <string name="comment">Comment</string>
    <string name="create_group">Create Group</string>
    <string name="picture">Picture</string>
    <string name="group_name">Group Name</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="openly">Public</string>
    <string name="only_creator_can_post">Only Creator Can Post</string>
    <string name="generate">create</string>
    <string name="search_group">Search Group</string>
    <string name="name">Name</string>
    <string name="search">search</string>
    <string name="loading">loading...</string>
    <string name="no_comments">No Comments Available</string>
    <string name="no_messages">You Have No Messages</string>
    <string name="no_news">No News</string>
    <string name="no_posts">No Posts Available</string>
    <string name="sorting">Sorting: </string>
    <string name="second">Second</string>
    <string name="seconds">Seconds</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="ca">ca</string>
    <string name="ago">ago</string>
    <string name="rate_comment">Rate Comment</string>
    <string name="join_group">Join Group?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="members">Members</string>
    <string name="your_comment">Your Comment</string>
    <string name="your_post">Your Post</string>
    <string name="was_downed">was downed</string>
    <string name="was_upped">was upped</string>
    <string name="was_commented">was commented</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="choose_group">Choose Group</string>
    <string name="go_to_location">Go To Location</string>
    <string name="search_posts">Search Posts</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="crop_image">Crop Image</string>
    <string name="leave_group">Leave Group</string>
    <string name="you_are_member">You Are Member</string>
    <string name="delete_group">Delete Group</string>
    <string name="create_comment">Comment</string>
    <string name="rate">Rate</string>
    <string name="back">Back</string>
    <string name="enter_password">Enter Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="ban_user_from_group">Ban User From Group</string>
    <string name="you_was_banned_from_group">You have been banned from group</string>
    <string name="sent_comment">Sent Comment!</string>
    <string name="sent_post">Sent Post!</string>
    <string name="no_location_available">Error. No location available!</string>
    <string name="check_form">Check form!</string>
    <string name="internet_error">Connection error!</string>
    <string name="text">Text:</string>
    <string name="create_post">Create Post</string>
    <string name="feedback">Feedback</string>
    <string name="you_are_banned">You are currently banned</string>
    <string name="waiting_for_gps">Waiting for GPS...</string>
    <string name="latest">Latest</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="highest">Highest</string>
    <string name="welcome_to_superfyme">Welcome to Superfyme!</string>
    <string name="preferences">Preferences</string>
    <string name="group_info">Group Info</string>
    <string name="invite_user">Invite User</string>
    <string name="new_user_dialog">Please choose a profile pic (press) and username!</string>
    <string name="username">Username</string>
    <string name="manage_group">Manage Group</string>
    <string name="system_message">Systemmessage</string>
    <string name="group_invitation">Group Invitation</string>
    <string name="group_invitation_msg">You\'ve got an invitation to the group:</string>
    <string name="accept">accept</string>

</resources>