<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/roundrec"
        android:gravity="center_horizontal"
        android:text="@string/feedback"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundrec"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <requestFocus />






        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.6"
            android:background="@drawable/roundrec_darker"
            android:gravity="bottom"
            android:orientation="vertical" >



            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edtFeedbackText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.7"
                android:background="@drawable/roundrec_white"
                android:gravity="top|left" />

            <Button
                android:id="@+id/btnSendFeedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickSendFeedback"
                android:text="@string/send" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>