<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/roundrec"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/roundrec_pure_red"
        android:gravity="center"
        android:text="@string/create_group"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/roundrec_darker"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imgGroupIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/group_icon" />
        <requestFocus/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:maxLength="16" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="public" />

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/generate" />

</LinearLayout>